examples/autogen-password-windows/main.tf
# This ensures we have unique CAF compliant names for our resources.
module "naming" {
  source  = "Azure/naming/azurerm"
  version = "0.4.1"
}

module "regions" {
  source                    = "Azure/avm-utl-regions/azurerm"
  version                   = "0.3.0"
  availability_zones_filter = true
}

data "azurerm_client_config" "current" {}

resource "random_integer" "region_index" {
  max = length(local.regions) - 1
  min = 0
}

resource "random_integer" "zone_index" {
  max = length(module.regions.regions_by_name[local.regions[random_integer.region_index.result].name].zones)
  min = 1
}

locals {
  regions = chunklist(module.regions.regions, 10)[0]
}

module "valid_deployment_region_filter" {
  for_each = toset([for region in local.regions : region.name])
  source   = "../../modules/sku_selector"

  deployment_region = each.value
}

locals {
  valid_regions = [for region in module.valid_deployment_region_filter : region if length(region.valid_skus) > 0]
}

resource "random_integer" "sku_index" {
  max = length(local.valid_regions[random_integer.region_index.result].valid_skus) - 1
  min = 0
}

locals {
  sku = local.valid_regions[random_integer.region_index.result].valid_skus[random_integer.sku_index.result]
}

# This is required for resource modules
resource "azurerm_resource_group" "this" {
  location = module.regions.regions[random_integer.region_index.result].name
  name     = module.naming.resource_group.name_unique
  tags     = local.tags
}

resource "azurerm_virtual_network" "this" {
  address_space       = ["10.0.0.0/16"]
  location            = azurerm_resource_group.this.location
  name                = module.naming.virtual_network.name_unique
  resource_group_name = azurerm_resource_group.this.name
  tags                = local.tags
}

resource "azurerm_subnet" "subnet" {
  address_prefixes     = ["10.0.1.0/24"]
  name                 = module.naming.subnet.name_unique
  resource_group_name  = azurerm_resource_group.this.name
  virtual_network_name = azurerm_virtual_network.this.name
}

# network security group for the nic with a rule to allow http traffic
resource "azurerm_network_security_group" "nic" {
  location            = azurerm_resource_group.this.location
  name                = "${module.naming.network_security_group.name_unique}-nic"
  resource_group_name = azurerm_resource_group.this.name

  security_rule {
    access                     = "Allow"
    destination_address_prefix = "*"
    destination_port_range     = "80"
    direction                  = "Inbound"
    name                       = "allow-http"
    priority                   = 100
    protocol                   = "Tcp"
    source_address_prefix      = "*"
    source_port_range          = "*"
  }
}

# network security group for the subnet with a rule to allow http traffic
resource "azurerm_network_security_group" "subnet" {
  location            = azurerm_resource_group.this.location
  name                = "${module.naming.network_security_group.name_unique}-subnet"
  resource_group_name = azurerm_resource_group.this.name

  security_rule {
    access                     = "Allow"
    destination_address_prefix = "*"
    destination_port_range     = "80"
    direction                  = "Inbound"
    name                       = "allow-http"
    priority                   = 100
    protocol                   = "Tcp"
    source_address_prefix      = "*"
    source_port_range          = "*"
  }
}

resource "azurerm_subnet_network_security_group_association" "this" {
  network_security_group_id = azurerm_network_security_group.subnet.id
  subnet_id                 = azurerm_subnet.subnet.id
}

resource "azurerm_public_ip" "natgwpip" {
  allocation_method   = "Static"
  location            = azurerm_resource_group.this.location
  name                = module.naming.public_ip.name_unique
  resource_group_name = azurerm_resource_group.this.name
  sku                 = "Standard"
  tags                = local.tags
  zones               = ["1", "2", "3"]
}

resource "azurerm_nat_gateway" "this" {
  location            = azurerm_resource_group.this.location
  name                = module.naming.nat_gateway.name_unique
  resource_group_name = azurerm_resource_group.this.name
  tags                = local.tags
  zones               = ["1"]
}

resource "azurerm_nat_gateway_public_ip_association" "this" {
  nat_gateway_id       = azurerm_nat_gateway.this.id
  public_ip_address_id = azurerm_public_ip.natgwpip.id
}

resource "azurerm_subnet_nat_gateway_association" "this" {
  nat_gateway_id = azurerm_nat_gateway.this.id
  subnet_id      = azurerm_subnet.subnet.id
}

module "avm_res_keyvault_vault" {
  source                      = "Azure/avm-res-keyvault-vault/azurerm"
  version                     = "0.9.1"
  tenant_id                   = data.azurerm_client_config.current.tenant_id
  name                        = module.naming.key_vault.name_unique
  resource_group_name         = azurerm_resource_group.this.name
  location                    = azurerm_resource_group.this.location
  enabled_for_disk_encryption = true
  network_acls = {
    default_action = "Allow"
    bypass         = "AzureServices"
  }

  role_assignments = {
    deployment_user_secrets = { #give the deployment user access to secrets
      role_definition_id_or_name = "Key Vault Secrets Officer"
      principal_id               = data.azurerm_client_config.current.object_id
    }
  }

  wait_for_rbac_before_key_operations = {
    create = "60s"
  }

  wait_for_rbac_before_secret_operations = {
    create = "60s"
  }

  tags = local.tags

}

# This is the module call
module "terraform_azurerm_avm_res_compute_virtualmachinescaleset" {
  source = "../../"
  # source             = "Azure/avm-res-compute-virtualmachinescaleset/azurerm"
  name                               = module.naming.virtual_machine_scale_set.name_unique
  resource_group_name                = azurerm_resource_group.this.name
  enable_telemetry                   = var.enable_telemetry
  location                           = azurerm_resource_group.this.location
  generate_admin_password_or_ssh_key = true
  sku_name                           = local.sku
  instances                          = 2
  extension_protected_setting        = {}
  admin_ssh_keys                     = []
  user_data_base64                   = null
  license_type                       = "None"

  boot_diagnostics = {
    storage_account_uri = "" # Enable boot diagnostics
  }
  network_interface = [{
    name                      = "VMSS-NIC"
    network_security_group_id = azurerm_network_security_group.nic.id
    ip_configuration = [{
      name      = "VMSS-IPConfig"
      subnet_id = azurerm_subnet.subnet.id
    }]
  }]
  os_profile = {
    custom_data = base64encode(file("init-script.ps1"))
    windows_configuration = {
      admin_username      = "azureuser"
      hotpatching_enabled = false
      timezone            = "Pacific Standard Time"
      provision_vm_agent  = true
      winrm_listener = [{
        protocol = "Http"
      }]
    }
  }
  generated_secrets_key_vault_secret_config = {
    key_vault_resource_id = module.avm_res_keyvault_vault.resource_id
    name                  = "azureuser-password-example"
  }
  data_disk = [{
    caching                   = "ReadWrite"
    create_option             = "Empty"
    disk_size_gb              = 10
    lun                       = 0
    managed_disk_type         = "StandardSSD_LRS"
    storage_account_type      = "StandardSSD_LRS"
    write_accelerator_enabled = false
  }]
  source_image_reference = {
    publisher = "MicrosoftWindowsServer"
    offer     = "WindowsServer"
    sku       = "2022-Datacenter"
    version   = "latest"
  }
  extension = [
    {
      name                        = "CustomScriptExtension"
      publisher                   = "Microsoft.Compute"
      type                        = "CustomScriptExtension"
      type_handler_version        = "1.10"
      auto_upgrade_minor_version  = true
      failure_suppression_enabled = false
      settings = jsonencode({
        commandToExecute = "copy %SYSTEMDRIVE%\\AzureData\\CustomData.bin c:\\init-script.ps1 \u0026 powershell -ExecutionPolicy Unrestricted -File %SYSTEMDRIVE%\\init-script.ps1"
      })
    },
    {
      name                        = "HealthExtension"
      publisher                   = "Microsoft.ManagedServices"
      type                        = "ApplicationHealthWindows"
      type_handler_version        = "1.0"
      auto_upgrade_minor_version  = true
      failure_suppression_enabled = false
      settings = jsonencode({
        port        = 80
        protocol    = "http"
        requestPath = "index.html"
      })
  }]
  tags       = local.tags
  depends_on = [azurerm_subnet_nat_gateway_association.this, module.avm_res_keyvault_vault]
}
